Fixed alignment of buttons in form.

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -81,3 +81,7 @@ body {
 .form .field-error {
 	background: #FF0000;
 }
+
+.right {
+	text-align: right;
+}
